# nldd

./: README.md
matlab/: DDIDstep_mex.cpp  NLDD_mex.cpp  NlBayesDenoiser_mex.cpp  README.md  compileMex.m  test.m
matlab/mex/: DDIDstep.mexa64  DDIDstep.mexmaci64  DDIDstep.mexw64  NLDD.mexa64  NLDD.mexmaci64  NLDD.mexw64  NlBayesDenoiser.mexa64  NlBayesDenoiser.mexmaci64  NlBayesDenoiser.mexw64
matlab/mex_no_OMP/: DDIDstep.mexa64  DDIDstep.mexmaci64  DDIDstep.mexw64  NLDD.mexa64  NLDD.mexmaci64  NLDD.mexw64  NlBayesDenoiser.mexa64  NlBayesDenoiser.mexmaci64  NlBayesDenoiser.mexw64
src/: CMakeLists.txt  FindFFTW3.cmake  main_DDID.cpp  main_NLBayes.cpp  main_NLDD.cpp
src/DDID/: RunDDID.cpp  RunDDID.h
src/NlBayes/: LibMatrix.cpp  LibMatrix.h  NlBayes.cpp  NlBayes.h
src/Utilities/: LibImages.cpp  LibImages.h  LibImages_io.cpp  Utilities.cpp  Utilities.h
